// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircleBadge respects "as" prop 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #fff;
  border-radius: 50%;
  box-shadow: 0 3px 6px rgba(149,157,165,0.15);
  width: 96px;
  height: 96px;
}

<a
  className="c0"
/>
`;

exports[`CircleBadge respects the inline prop 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #fff;
  border-radius: 50%;
  box-shadow: 0 3px 6px rgba(149,157,165,0.15);
  width: 96px;
  height: 96px;
}

<div
  className="c0"
/>
`;

exports[`CircleBadge respects the variant prop 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #fff;
  border-radius: 50%;
  box-shadow: 0 3px 6px rgba(149,157,165,0.15);
  width: 128px;
  height: 128px;
}

<div
  className="c0"
/>
`;

exports[`CircleBadge uses the size prop to override the variant prop 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #fff;
  border-radius: 50%;
  box-shadow: 0 3px 6px rgba(149,157,165,0.15);
  width: 20px;
  height: 20px;
}

<div
  className="c0"
  size={20}
/>
`;
